--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
   }
   a{
 z-index: 10;
-color: red;
+color: white;
   }
 .container{
     z-index: 0;
@@ -29,7 +29,6 @@ color: red;
      height: 100vh;
      width: 100%;
      margin: 0;
-   
      background: linear-gradient(to top, #000 50%, #fff 50%);
      background-size: 100% 200%;
      background-position: top left;
